@@ -85,6 +85,10 @@
     "name": "Hippo91",
     "team": "Maintainers"
   },
+  "Hnasar@users.noreply.github.com": {
+    "mails": ["Hnasar@users.noreply.github.com", "hashem@hudson-trading.com"],
+    "name": "Hashem Nasarat"
+  },
   "hugovk@users.noreply.github.com": {
     "mails": ["hugovk@users.noreply.github.com"],
     "name": "Hugo van Kemenade"
